--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="maindiv"></div>
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal" onchange="validateAmount()">  <br/>
-        Interest Rate <input type="range"  id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()">
+        Amount <input type="number"  id="principal" onchange="return validateAmount()">  <br/>
+        Interest Rate <input type="range"  id="rate" min="1" max="20" value="10.25" step="0.25" onchange="return updateRate()">
         <span id="rate_val">10.25%
         </span><br/>
         No. of Years <select id="years">
@@ -26,7 +26,7 @@
                         <option value="10">10</option>
                     </select>
                         <br/>
-        <button onclick="compute()">Compute</button>
+        <button onclick="return compute()">Compute</button>
         <span id="result"></span>
         
     </div>
