--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>Simple Interest Calculator</title> 
     <head>
-    <script src="script.js"></script>
+    <script src="script.js" type="text/javascript"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
